generated/checker-for-evaluation/generated/test-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/0/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:87:54: error: cannot convert ‘clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type’ {aka ‘bool’} to ‘const bool*’ in initialization
   87 |   const bool *Assigned = State->get<NumTripsAssigned>();
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                      |
      |                                                      clang::ento::DefaultProgramStatePartialTraitImpl<bool>::data_type {aka bool}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
